--- a/MyGameEngine2023.vcxproj.filters
+++ b/MyGameEngine2023.vcxproj.filters
@@ -5,10 +5,6 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
-    <Filter Include="リソース ファイル">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
     <Filter Include="ヘッダーファイル">
       <UniqueIdentifier>{f9ac5f7c-86de-4d39-8ba7-5e83968d5bfc}</UniqueIdentifier>
     </Filter>
@@ -17,6 +13,10 @@
     </Filter>
     <Filter Include="ヘッダーファイル\Engine">
       <UniqueIdentifier>{781800bf-0886-4a69-a355-7df3c6979e71}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッダーファイル\リソース ファイル">
+      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
+      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -76,6 +76,7 @@
     <FxCompile Include="Simple3D.hlsl" />
     <FxCompile Include="Simple2D.hlsl" />
     <FxCompile Include="PointLightShading.hlsl" />
+    <FxCompile Include="Toon.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Camera.h">
@@ -117,14 +118,14 @@
     <ClInclude Include="Engine\SphereCollider.h">
       <Filter>ヘッダーファイル\Engine</Filter>
     </ClInclude>
-    <ClInclude Include="TestScene.h">
-      <Filter>ヘッダーファイル</Filter>
+    <ClInclude Include="axisClass.h">
+      <Filter>ヘッダーファイル\Engine</Filter>
     </ClInclude>
     <ClInclude Include="Stage.h">
-      <Filter>ヘッダーファイル</Filter>
+      <Filter>ヘッダーファイル\Engine</Filter>
     </ClInclude>
-    <ClInclude Include="axisClass.h">
-      <Filter>ヘッダーファイル</Filter>
+    <ClInclude Include="TestScene.h">
+      <Filter>ヘッダーファイル\Engine</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
