--- a/MyGameEngine2023.vcxproj.filters
+++ b/MyGameEngine2023.vcxproj.filters
@@ -77,6 +77,7 @@
     <FxCompile Include="Simple2D.hlsl" />
     <FxCompile Include="PointLightShading.hlsl" />
     <FxCompile Include="Toon.hlsl" />
+    <FxCompile Include="NormalMapping.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Camera.h">
